--- a/misc/update/missing_home_directory.html
+++ b/misc/update/missing_home_directory.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home Directory Not Found</title>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      font-size: 20px;
-      line-height: 1.4;
-      color: #333;
-      font-weight: 300;
-      padding: 15px;
-    }
-    h1 {
-      font-weight: 500;
-      font-size: 30px;
-    }
-    .text-danger {
-      color: #a94442;
-    }
-  </style>
+  <title>Activate Your Account</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Home directory not found</h1>
-  <p>
-  Your home directory appears to be missing. If this is the first time you have logged in with this account, you may
-  need to access our systems using SSH in order to trigger the creation of your home directory.
-  </p>
-  <ol>
-    <li><a href="/pun/sys/shell" target="_blank">Access our system using SSH to cerate home directory</a></li>
-    <li><a href="/nginx/stop?redir=/pun/sys/dashboard">Restart Web Server</a></li>
-  </ol>
+<body class="bg-light">
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="card shadow-sm">
+          <div class="card-body p-4">
+            <h1 class="card-title h3 mb-4 text-center">Activate Your Account</h1>
+            <p class="mb-4 text-muted">
+              To complete the activation of your account, please follow the two steps below:
+            </p>
+            <ul class="list-group mb-4">
+              <li class="list-group-item">
+                <a href="/pun/sys/shell" target="_blank" class="btn btn-primary w-100">
+                  1. Access our system with web	terminal
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="/nginx/stop?redir=/pun/sys/dashboard" class="btn btn-success w-100">
+                  2. Restart the Web Server
+                </a>
+              </li>
+            </ul>
+            <div class="alert alert-info text-center mb-0">
+              After completing both steps, your account will be fully activated.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Bootstrap JS (optional, for components that need it) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
